Field no longer overflows when card is dragged off screen.

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ body {
 	height: 100%;
 	background-image: url("../img/tiles/grassplain.png");
 	margin-right: 255px;
-	overflow: auto;
+	overflow: hidden;
 }
 
 #centerfield{
